@@ -44,17 +44,18 @@ enum
 
 
 
-static void   xfce_mixer_preferences_class_init        (XfceMixerPreferencesClass *klass);
-static void   xfce_mixer_preferences_init              (XfceMixerPreferences      *preferences);
-static void   xfce_mixer_preferences_finalize          (GObject                   *object);
-static void   xfce_mixer_preferences_get_property      (GObject                   *object,
-                                                        guint                      prop_id,
-                                                        GValue                    *value,
-                                                        GParamSpec                *pspec);
-static void   xfce_mixer_preferences_set_property      (GObject                   *object,
-                                                        guint                      prop_id,
-                                                        const GValue              *value,
-                                                        GParamSpec                *pspec);
+static void       xfce_mixer_preferences_class_init         (XfceMixerPreferencesClass *klass);
+static void       xfce_mixer_preferences_init               (XfceMixerPreferences      *preferences);
+static void       xfce_mixer_preferences_finalize           (GObject                   *object);
+static void       xfce_mixer_preferences_get_property       (GObject                   *object,
+                                                             guint                      prop_id,
+                                                             GValue                    *value,
+                                                             GParamSpec                *pspec);
+static void       xfce_mixer_preferences_set_property       (GObject                   *object,
+                                                             guint                      prop_id,
+                                                             const GValue              *value,
+                                                             GParamSpec                *pspec);
+static GPtrArray *xfce_mixer_preferences_get_default_tracks (XfceMixerPreferences *preferences);
 
 
 
@@ -305,7 +306,7 @@ xfce_mixer_preferences_set_property (GObject      *object,
             }
         }
       else
-        preferences->controls = g_ptr_array_new ();
+        preferences->controls = xfce_mixer_preferences_get_default_tracks (preferences);
       break;
     default:
       G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
@@ -379,5 +380,39 @@ xfce_mixer_preferences_get_control_visible (XfceMixerPreferences *preferences,
     }
 
   return visible;
+}
+
+
+
+static GPtrArray *
+xfce_mixer_preferences_get_default_tracks (XfceMixerPreferences *preferences)
+{
+  GList      *track_list;
+  GList      *iter;
+  GPtrArray  *tracks;
+  GstElement *card;
+  gchar      *track_label;
+  GValue     *value;
+
+  tracks = g_ptr_array_new ();
+
+  if (preferences->sound_card != NULL)
+    {
+      card = xfce_mixer_get_card (preferences->sound_card);
+
+      if (GST_IS_MIXER (card))
+        {
+          track_list = xfce_mixer_get_default_track_list (card);
+          for (iter = track_list; iter != NULL; iter = g_list_next (iter))
+            {
+              value = g_value_init (g_new0 (GValue, 1), G_TYPE_STRING);
+              g_object_get (G_OBJECT (iter->data), "label", &track_label, NULL);
+              g_value_take_string (value, track_label);
+              g_ptr_array_add (tracks, value);
+            }
+        }
+    }
+
+  return tracks;
 }
 
